style: Update MealsMap.scss to add z-index for better layering of map component to fix header issues

--- a/client/src/components/MealsMap/MealsMap.scss
+++ b/client/src/components/MealsMap/MealsMap.scss
@@ -8,6 +8,7 @@
   position: relative;
   height: 100vh;
   width: 100vw;
+  z-index: -1;
 
   // @include mobile {
   //   height: 75vh;
